fix spacing issue with name and handle in card title

--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -17,6 +17,7 @@
     font-weight: normal;
     color: darkgray;
     font-size: 14px;
+    margin-left: 10px;
 }
 
 .twitter-content {
